# bevformerpp

./: .gitignore  LICENSE  Project_Proposal.md  README.md  main.ipynb  pyproject.toml  requirements.txt  train.py
.kiro/specs/bev-fusion-system/: design.md  requirements.md  tasks.md
configs/: __init__.py  base_config.yaml  config_loader.py  debug.yaml  eval_config.yaml  train_config.yaml
docs/: ARCHITECTURE.md  CAMERA_ENCODER_IMPLEMENTATION.md  CHANGE_REPORT.md  LIDAR_ENCODER_IMPLEMENTATION.md  MASK_AND_FORWARD_FIX_REPORT.md  POST_AUDIT_FIX_REPORT.md  README.md  REFACTOR_REPORT.md  SETUP_SUMMARY.md  SPATIAL_FUSION_IMPLEMENTATION.md  VIS_LIDAR_FIX_REPORT.md  architecture_overview.md  config_reference.md  modules_attention.md  modules_backbone.md  modules_bev_fusion_model.md  modules_bevformer.md  modules_camera_encoder.md  modules_convrnn.md  modules_data_structures.md  modules_fusion.md  modules_head.md  modules_lidar_encoder.md  modules_losses.md  modules_mc_convrnn.md  modules_memory_bank.md  modules_metrics.md  modules_neck.md  modules_nuscenes_dataset.md  modules_preprocessing.md  modules_target_generator.md  modules_temporal_attention.md  modules_utils.md  training_and_notebook.md
examples/: demo_camera_encoder.py  demo_fusion.py  demo_lidar_encoder.py
modules/: _fusion_impl.py  attention.py  backbone.py  bev_fusion_model.py  bevformer.py  camera_encoder.py  convrnn.py  data_structures.py  dataset.py  fusion.py  head.py  lidar_encoder.py  losses.py  mc_convrnn.py  memory_bank.py  metrics.py  neck.py  nuscenes_dataset.py  preprocessing.py  target_generator.py  temporal_attention.py  utils.py
modules/fusion/: __init__.py  cross_attention_fusion.py
modules/temporal/: __init__.py  ego_motion_warp.py  residual_motion_refine.py  visibility_gate.py
modules/utils/: __init__.py  core.py  vis_bev.py
modules/vis/: __init__.py  core.py  feature_plots.py  figure.py  heatmap_peaks.py  lidar_bev.py  paper_figure.py
scripts/data/: extract_dataset.py  setup_env.py  verify_installation.py
scripts/diagnostics/: verify_gradient_flow.py  verify_heatmap_alignment.py
scripts/eval/: export_nuscenes_predictions.py  run_nuscenes_eval.py
scripts/experiments/: compare_temporal_methods.py
tests/: README.md  __init__.py  conftest.py  test_bev_alignment_sanity.py  test_camera_encoder.py  test_config.py  test_dataset.py  test_forward_accepts_T1_sequence.py  test_fusion_cross_attn.py  test_heatmap_peaks.py  test_l3_trends.py  test_lidar_bev_projection.py  test_lidar_encoder.py  test_lidar_masking.py  test_mask_shape_regression.py  test_mc_convrnn.py  test_nuscenes_export.py  test_padding_invariance.py  test_scene_boundary.py  test_temporal_unroll.py  test_vis_lidar_extraction.py  test_vis_semantics.py
tests/property_tests/: __init__.py  test_camera_properties.py  test_fusion_properties.py  test_lidar_properties.py  test_temporal_properties.py
tools/debugging/: overfit_one_sample.py
tools/profiling/: profile_runtime.py
