[project]
name = "bevformerpp"
version = "0.1.0"
description = "BEVFormer++"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.0",
    "jupyterlab>=4.3.5",
    "matplotlib>=3.10.0",
    "nuscenes-devkit>=1.1.9",
    "opencv-python>=4.11.0.86",
    "pyquaternion>=0.9.9",
    "timm>=1.0.14",
    "torch>=2.6.0.dev20250211",
]
